Addresses brand-heading size issue on small viewports.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -144,6 +144,18 @@ section {
     }
 }
 
+@media (max-width: 640px) {
+    .brand-heading {
+        font-size: 2.2em;
+    }
+}
+
+@media (max-width: 480px) {
+    .brand-heading {
+        font-size: 1.8em;
+    }
+}
+
 .hidden {
     display: none;
 }
